--- a/gknot/templates/index.html
+++ b/gknot/templates/index.html
@@ -38,8 +38,11 @@
           Kridsada Thanabulpong</a> using <a href="http://diveintomark.org/">
           Mark Pilgrim</a>'s excellent
         <a href="http://chardet.feedparser.org/">chardet</a> library
-        for encoding detection. It is hosted with
+        for encoding detection.
         <a href="http://code.google.com/appengine/">Google AppEngine</a>.
+        This website's <a href="http://github.com/sirn/gknot">source code</a>
+        is licensed under <em>BSD license</em>.
+      </p>
     </section>
   </body>
 </html>
