--- a/gknot/templates/index.html
+++ b/gknot/templates/index.html
@@ -21,7 +21,7 @@
       <pre>/soup/<strong>protocol</strong>/<strong>domain</strong>/<strong>path</strong></pre>
       <p>
         Or you can use this bookmarklet:
-        <a href="javascript:d=document;d.location='{{ url_for('land', _external=True) }}?source='+encodeURIComponent(d.location);" id="bookmarklet">Knot it!</a>
+        <a href="javascript:(function(){d=document;d.location='{{ url_for('land', _external=True) }}?source='+encodeURIComponent(d.location);})();" id="bookmarklet">Knot it!</a>
       </p>
     </section>
     <section id="narrate">
